# src/app/api/models/goods.ts
@@ -1,15 +1,15 @@
 /* tslint:disable */
-export interface ApiGoodsPostParams {
-
-  /**
-   * 商品名称
-   */
+export interface ApiGoodsIdPutParams {
   name: string;
 }
 export interface ResGetApiGoodsList {
   items: Array<{id: number, name: string}>;
   total: number;
 }
-export interface ApiGoodsIdPutParams {
+export interface ApiGoodsPostParams {
+
+  /**
+   * 商品名称
+   */
   name: string;
 }
